--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyAi0D0bYbV0yj6BiQhspecNbA4kselMRYE"/>
+           android:value="API_KEY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
